Sat Sep 22 13:39:35 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-11.00.h: Removed ACE_HAS_BROKEN_CONVERSIONS; thanks
          to Johnny for noticing this isn't needed anymore. Also cleaned up
          some comments that still referred to HP C++ rather than aC++.

Fri Sep 21 19:00:43 UTC 2007  Dale Wilson  <wilsond@ociweb.com>

        * ace/OS_NS_Thread.h:
          Olli reports that the change to OS_NS_Thread.h causes
          a test failure on LynxOS. (Bug #3074)
          Since the change isn't critical -- the config-win32-common.h
          change was the real fix to the problem -- I'm reverting this file.

Fri Sep 21 18:59:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Removed defining of __HP_aCC when it is not defined yet

Fri Sep 21 16:34:47 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ace/Hash_Cache_Map_Manager_T.cpp:
        * ace/Log_Msg.cpp:
        * ace/OS_NS_Thread.inl:
        * ace/OS_NS_stdio.inl:
        * ace/OS_NS_sys_mman.inl:
        * ace/OS_NS_sys_socket.inl:
        * ace/OS_NS_unistd.inl:

          Fixed ACE_OS fuzz warnings. Use ACE_OS calls instead of raw OS functions
          where possible. If fuzz detected a false-positive, then disable
          the ACE_OS fuzz check for that section of the code.

Fri Sep 21 17:19:52 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/INET_Addr.cpp (get_host_name_i):

          Removed const qualifiers.  The variables in question do get
          reassigned.

Fri Sep 21 09:32:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Reactor_Exceptions_Test.cpp:
          Updated this test to not derive from ACE_Reactor, that is not
          possible anymore. Fixes the failing of this test on our
          build systems

Fri Sep 21 09:30:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h: