@@ -29,11 +29,7 @@
 // complicated.
 # if defined (ACE_HAS_THREADS) && (defined (ACE_HAS_THREAD_SPECIFIC_STORAGE) || defined (ACE_HAS_TSS_EMULATION))
 #   define ACE_TSS_TYPE(T) ACE_TSS< T >
-#   if defined (ACE_HAS_BROKEN_CONVERSIONS)
-#     define ACE_TSS_GET(I, T) (*(I))
-#   else
-#     define ACE_TSS_GET(I, T) ((I)->operator T * ())
-#   endif /* ACE_HAS_BROKEN_CONVERSIONS */
+#   define ACE_TSS_GET(I, T) ((I)->operator T * ())
 # else
 #   define ACE_TSS_TYPE(T) T
 #   define ACE_TSS_GET(I, T) (I)
@@ -65,7 +61,7 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
  * However, if you must use an older compiler that won't work with a built-in
  * type, the ACE_TSS_Type_Adapter class template, below, can be used for
  * adapting built-in types to work with ACE_TSS.
- *  
+ *
  * @note Beware when creating static instances of this type
  * (as with any other, btw). The unpredictable order of initialization
  * across different platforms may cause a situation where one uses
@@ -125,7 +121,7 @@ public:
   //@{
   /**
    * Get the thread-specific object for this object.
-   * 
+   *
    * @return  0 if the object has never been initialized, otherwise returns
    *          the calling thread's copy of the data. The returned pointer
    *          may be 0 under odd error conditions; check errno for further
