@@ -1,3 +1,9 @@
+Mon Sep 24 07:47:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/README:
+        * ace/TSS_T.h:
+          Removed ACE_HAS_BROKEN_CONVERSIONS usage
+
 Sat Sep 22 13:39:35 UTC 2007  Steve Huston  <shuston@riverace.com>
 
         * ace/config-hpux-11.00.h: Removed ACE_HAS_BROKEN_CONVERSIONS; thanks
